@@ -4,6 +4,7 @@ name = App-Doh
 perl                   = 5.010001
 local::lib             = 2.000014
 namespace::autoclean   = 0.22
+namespace::clean       = 0.25
 strictures             = 1.005004
 warnings::illegalproto = 0.001002
 App::Ack               = 2.12
