@@ -14,9 +14,8 @@ with q(App::Doh::Role::Templates);
 # Public attributes
 has '+moniker'   => default => 'html';
 
-has 'formatters' => is => 'lazy', isa => HashRef[Object], builder => sub {
-   load_components 'View::HTML', $_[ 0 ]->usul->config,
-      { builder => $_[ 0 ]->usul, } };
+has 'formatters' => is => 'lazy', isa => HashRef[Object],
+   builder       => sub { load_components 'View::HTML', $_[ 0 ]->usul };
 
 has 'type_map'   => is => 'lazy', isa => HashRef, builder => sub {
    my $self = shift; my $map = { htm => 'html', html => 'html' };
